# smapi-rs

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  models.rs  util.rs
src/models/: shared.rs  skill_manifest.rs
src/models/shared/: category.rs  country.rs  event_name.rs  interface.rs  locale.rs  permission_name.rs
src/models/skill_manifest/: apis.rs  authorized_client.rs  events.rs  permission_items.rs  privacy_and_compliance.rs  publishing_information.rs
