[package]
name = "smapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
iso8601-duration = "0.2.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_with = { version = "3.3.0", features = ["chrono"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.48"
validator = { version = "0.16.1", features = ["derive"] }
